--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icons/vscode.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vscode-clone</title>
+    <title>VSCode Clone - A Powerful & Free Code Editor</title>
+    <meta name="description" content="Experience a powerful and free open-source code editor, a VSCode clone built with React. Enjoy a familiar interface with extensive language support, debugging tools, and integrated terminal. Perfect for developers looking for a lightweight yet feature-rich IDE alternative." />
+    <meta name="keywords" content="vscode clone, visual studio clone, code editor, free code editor, open source ide, ide alternative, react code editor, web development ide, javascript editor, typescript editor, developer tools" />
+    <meta name="author" content="Your Name or Project Name" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="VSCode Clone - A Powerful & Free Code Editor" />
+    <meta property="og:description" content="A feature-rich, open-source Visual Studio Code clone built with React. Get the familiar coding experience with powerful tools for free." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="YOUR_WEBSITE_URL_HERE" />
+    <meta property="og:image" content="YOUR_PREVIEW_IMAGE_URL_HERE" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="VSCode Clone - A Powerful & Free Code Editor" />
+    <meta name="twitter:description" content="Discover a powerful, free, and open-source code editor that mirrors the functionality of Visual Studio Code. Built with React." />
+    <meta name="twitter:image" content="YOUR_PREVIEW_IMAGE_URL_HERE" />
   </head>
   <body>
     <div id="root"></div>
