--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icons/vscode.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VSCode Clone - A Powerful & Free Code Editor</title>
     <meta name="description" content="Experience a powerful and free open-source code editor, a VSCode clone built with React. Enjoy a familiar interface with extensive language support, debugging tools, and integrated terminal. Perfect for developers looking for a lightweight yet feature-rich IDE alternative." />
     <meta name="keywords" content="vscode clone, visual studio clone, code editor, free code editor, open source ide, ide alternative, react code editor, web development ide, javascript editor, typescript editor, developer tools" />
     <meta name="author" content="Your Name or Project Name" />
@@ -12,12 +11,13 @@
     <meta property="og:title" content="VSCode Clone - A Powerful & Free Code Editor" />
     <meta property="og:description" content="A feature-rich, open-source Visual Studio Code clone built with React. Get the familiar coding experience with powerful tools for free." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="YOUR_WEBSITE_URL_HERE" />
-    <meta property="og:image" content="YOUR_PREVIEW_IMAGE_URL_HERE" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:url" content="https://github.com/Elsheshtawey1/vscode-clone-project" />
+    <meta property="og:image" content="/icons/vscode.svg" />
+    <meta name="twitter:card" content="/icons/vscode.svg" />
     <meta name="twitter:title" content="VSCode Clone - A Powerful & Free Code Editor" />
     <meta name="twitter:description" content="Discover a powerful, free, and open-source code editor that mirrors the functionality of Visual Studio Code. Built with React." />
     <meta name="twitter:image" content="YOUR_PREVIEW_IMAGE_URL_HERE" />
+    <title>VSCode Clone - A Powerful & Free Code Editor</title>
   </head>
   <body>
     <div id="root"></div>
